--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -24,6 +24,7 @@
 			<div id="gradient"></div>
 
 			<div class="buttons group">
+				<button class="button" id="toTop">to top</button>
 				<button class="button" id="toLeft">to left</button>
 				<button class="button" id="toRight">to right</button>
 			</div>
