j'avais lu un bouton pour les gérer les directions lol

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -24,10 +24,12 @@
 			<div id="gradient"></div>
 
 			<div class="buttons group">
-				<!-- <button class="button" id="toTop">to top</button>
-				<button class="button" id="toLeft">to left</button>
-				<button class="button" id="toRight">to right</button> -->
-				<button class="button" id="toRotate">rotate</button>
+				<button class="button" id="to45deg">to 45 deg</button>
+				<button class="button" id="toRight">to right (90 deg)</button>
+				<button class="button" id="to135">to 135 deg</button>
+				<button class="button" id="to225">to 225 deg</button>
+				<button class="button" id="toLeft">to left (270 deg)</button>
+				<button class="button" id="to315">to 315 deg</button>
 			</div>
 
 		</div>
